@@ -2,13 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.tesobe</groupId>
-  <artifactId>OBP-API</artifactId>
+  <artifactId>obp-api-parent</artifactId>
   <version>1.0</version>
-  <packaging>war</packaging>
-  <name>Open Bank Project API</name>
+  <packaging>pom</packaging>
+  <name>Open Bank Project API Parent</name>
   <inceptionYear>2011</inceptionYear>
   <properties>
     <scala.version>2.12</scala.version>
@@ -29,6 +28,11 @@
     <vscaladoc.links.liftweb.pathsufix>scaladocs/</vscaladoc.links.liftweb.pathsufix>
     <vscaladoc.links.liftweb.baseurl>http://scala-tools.org/mvnsites/liftweb</vscaladoc.links.liftweb.baseurl>
   </properties>
+
+  <modules>
+    <module>obp-api</module>
+    <module>obp-commons</module>
+  </modules>
 
   <repositories>
     <repository>
@@ -65,330 +69,17 @@
     </pluginRepository>
   </pluginRepositories>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.github.everit-org.json-schema</groupId>
-      <artifactId>org.everit.json.schema</artifactId>
-      <version>1.6.1</version>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>1.2.3</version>
-    </dependency>
-    <dependency>
-      <groupId>org.scala-lang.modules</groupId>
-      <artifactId>scala-xml_${scala.version}</artifactId>
-      <version>1.0.5</version>
-    </dependency>
-    <dependency>
-      <groupId>net.liftweb</groupId>
-      <artifactId>lift-mapper_${scala.version}</artifactId>
-      <version>${lift.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>net.databinder.dispatch</groupId>
-      <artifactId>dispatch-lift-json_${scala.version}</artifactId>
-      <version>0.13.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>log4j-over-slf4j</artifactId>
-      <version>1.7.25</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-      <version>${log4j.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>${log4j.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.kafka</groupId>
-      <artifactId>kafka-clients</artifactId>
-      <version>${kafka.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.kafka</groupId>
-      <artifactId>connect-json</artifactId>
-      <version>${kafka.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.bouncycastle</groupId>
-      <artifactId>bcpg-jdk16</artifactId>
-      <version>1.46</version>
-    </dependency>
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>9.4.1211</version>
-    </dependency>
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>1.4.191</version>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>6.0.6</version>
-    </dependency>
-    <dependency>
-      <groupId>com.microsoft.sqlserver</groupId>
-      <artifactId>mssql-jdbc</artifactId>
-      <version>6.2.0.jre8</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>3.1.0</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_${scala.version}</artifactId>
-      <version>3.0.5</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
-    <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-server</artifactId>
-      <version>${jetty.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.eclipse.jetty.websocket/websocket-server -->
-    <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-webapp</artifactId>
-      <version>${jetty.version}</version>
-      <scope>test</scope>
-  </dependency>
-    <dependency>
-      <groupId>net.liftweb</groupId>
-      <artifactId>lift-mongodb_${scala.version}</artifactId>
-      <version>${lift.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>net.liftweb</groupId>
-      <artifactId>lift-mongodb-record_${scala.version}</artifactId>
-      <version>${lift.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-java</artifactId>
-      <version>2.52.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-htmlunit-driver</artifactId>
-      <version>2.52.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>4.5.2</version>
-    </dependency>
-    <dependency>
-      <groupId>net.sourceforge.htmlunit</groupId>
-      <artifactId>htmlunit</artifactId>
-      <version>2.21</version>
-    </dependency>
-    <dependency>
-      <groupId>net.liftmodules</groupId>
-      <artifactId>amqp_3.1_${scala.version}</artifactId>
-      <version>1.5.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.tokbox</groupId>
-      <artifactId>opentok-server-sdk</artifactId>
-      <version>3.0.0-beta.2</version>
-      <exclusions>
-        <exclusion>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-databind</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.elasticsearch</groupId>
-      <artifactId>elasticsearch</artifactId>
-      <version>6.1.1</version>
-    </dependency>
-    <dependency>
-      <groupId>com.sksamuel.elastic4s</groupId>
-      <artifactId>elastic4s-http_${scala.version}</artifactId>
-      <version>6.1.1</version>
-      <!-- TODO try to switch to slf4j from log4j
-      <exclusions>
-        <exclusion>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-api</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-core</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-1.2-api</artifactId>
-        </exclusion>
-      </exclusions> -->
-    </dependency>
-    <!-- for LiftConsole -->
-    <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scala-compiler</artifactId>
-      <version>${scala.compiler}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scala-library</artifactId>
-      <version>${scala.compiler}</version>
-    </dependency>
-    <dependency>
-      <groupId>oauth.signpost</groupId>
-      <artifactId>signpost-commonshttp4</artifactId>
-      <version>1.2.1.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.tesobe.obp</groupId>
-      <artifactId>obp-ri-core</artifactId>
-      <version>${obp-ri.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.tesobe.obp</groupId>
-      <artifactId>obp-ri-kafka</artifactId>
-      <version>${obp-ri.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.tesobe.obp</groupId>
-      <artifactId>obp-ri-transport</artifactId>
-      <version>${obp-ri.version}</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-http-core -->
-    <dependency>
-      <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-http-core_${scala.version}</artifactId>
-      <version>10.1.6</version>
-    </dependency>
-    <dependency>
-      <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-actor_${scala.version}</artifactId>
-      <version>${akka.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-remote_${scala.version}</artifactId>
-      <version>${akka.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-stream-kafka_${scala.version}</artifactId>
-      <version>${akka-streams-kafka.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.sksamuel.avro4s</groupId>
-      <artifactId>avro4s-core_${scala.version}</artifactId>
-      <version>${avro.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.twitter</groupId>
-      <artifactId>chill-akka_${scala.version}</artifactId>
-      <version>0.9.1</version>
-    </dependency>
-    <dependency>
-      <groupId>com.twitter</groupId>
-      <artifactId>chill-bijection_${scala.version}</artifactId>
-      <version>0.9.1</version>
-    </dependency>
-    <dependency>
-      <groupId>com.github.cb372</groupId>
-      <artifactId>scalacache-guava_${scala.version}</artifactId>
-      <version>0.9.3</version>
-    </dependency>
-    <dependency>
-      <groupId>com.github.cb372</groupId>
-      <artifactId>scalacache-redis_${scala.version}</artifactId>
-      <version>0.9.3</version>
-    </dependency>
-    <dependency>
-      <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-slf4j_${scala.version}</artifactId>
-      <version>${akka.version}</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/com.github.dwickern/scala-nameof_2.11 -->
-    <dependency>
-      <groupId>com.github.dwickern</groupId>
-      <artifactId>scala-nameof_${scala.version}</artifactId>
-      <version>1.0.3</version>
-    </dependency>
-    <dependency>
-      <groupId>com.auth0</groupId>
-      <artifactId>java-jwt</artifactId>
-      <version>3.3.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.nimbusds</groupId>
-      <artifactId>nimbus-jose-jwt</artifactId>
-      <version>6.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.github.OpenBankProject</groupId>
-      <artifactId>scala-macros</artifactId>
-      <version>v1.0.0-alpha.3</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.scalameta/scalameta -->
-    <dependency>
-      <groupId>org.scalameta</groupId>
-      <artifactId>scalameta_${scala.version}</artifactId>
-      <version>3.7.4</version>
-    </dependency>
-    <dependency>
-      <groupId>ai.grakn</groupId>
-      <artifactId>redis-mock</artifactId>
-      <version>0.1.6</version>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/com.nimbusds/oauth2-oidc-sdk -->
-    <dependency>
-      <groupId>com.nimbusds</groupId>
-      <artifactId>oauth2-oidc-sdk</artifactId>
-      <version>5.17.1</version>
-    </dependency>
-    <dependency>
-      <groupId>com.vladsch.flexmark</groupId>
-      <artifactId>flexmark-all</artifactId>
-      <version>0.40.8</version>
-    </dependency>
-    <!--scala utils, for type scan-->
-    <dependency>
-      <groupId>org.clapper</groupId>
-      <artifactId>classutil_${scala.version}</artifactId>
-      <version>1.4.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.github.grumlimited</groupId>
-      <artifactId>geocalc</artifactId>
-      <version>0.5.7</version>
-    </dependency>
-  </dependencies>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>net.liftweb</groupId>
+        <artifactId>lift-common_${scala.version}</artifactId>
+        <version>${lift.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
-    <sourceDirectory>src/main/scala</sourceDirectory>
-    <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -398,51 +89,10 @@
           <skipTests>true</skipTests>
         </configuration>
       </plugin>
-      <plugin>
-        <!-- enable the scalatest plugin -->
-        <groupId>org.scalatest</groupId>
-        <artifactId>scalatest-maven-plugin</artifactId>
-        <version>1.0</version>
-        <configuration>
-          <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-            <forkMode>once</forkMode>
-            <junitxml>.</junitxml>
-            <filereports>WDF TestSuite.txt</filereports>
-            <argLine>-Drun.mode=test -XX:MaxPermSize=128m -Xms512m -Xmx512m</argLine>
-            <tagsToExclude>code.external</tagsToExclude>
-        </configuration>
-        <executions>
-          <execution>
-            <id>test</id>
-            <goals>
-              <goal>test</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-        <plugin>
-          <!-- add src/main/java to source dirs -->
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>build-helper-maven-plugin</artifactId>
-          <version>1.10</version>
-          <executions>
-            <execution>
-              <phase>generate-sources</phase>
-              <goals>
-                <goal>add-source</goal>
-              </goals>
-              <configuration>
-                <sources>
-                  <source>src/main/java</source>
-                </sources>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
         <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>scala-maven-plugin</artifactId>
-          <version>3.2.2</version>
+          <version>3.4.6</version>
           <configuration>
             <charset>${project.build.sourceEncoding}</charset>
             <jvmArgs>
@@ -479,11 +129,6 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>2.6</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.1</version>
           <executions>
@@ -509,31 +154,10 @@
             </execution>
           </executions>
         </plugin>
-      <plugin>
-        <groupId>org.mortbay.jetty</groupId>
-        <artifactId>maven-jetty-plugin</artifactId>
-        <version>6.1.26</version>
-        <configuration>
-          <contextPath>/</contextPath>
-          <scanIntervalSeconds>5</scanIntervalSeconds>
-          <jvmArgs>-Xmx512m -Xms512m</jvmArgs>
-        </configuration>
-      </plugin>
-      <plugin>
-          <groupId>net.alchim31.maven</groupId>
-          <artifactId>yuicompressor-maven-plugin</artifactId>
-          <version>1.5.1</version>
-          <executions>
-            <execution>
-              <goals>
-                <goal>compress</goal>
-              </goals>
-            </execution>
-          </executions>
-          <configuration>
-            <nosuffix>true</nosuffix>
-            <encoding>${project.build.sourceEncoding}</encoding>
-          </configuration>
+        <plugin>
+          <groupId>org.mortbay.jetty</groupId>
+          <artifactId>maven-jetty-plugin</artifactId>
+          <version>6.1.26</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -586,7 +210,7 @@
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.2.2</version>
+        <version>3.4.6</version>
         <configuration>
           <charset>${project.build.sourceEncoding}</charset>
           <jvmArgs>
